--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
   }
+  .Container{
+    height: 100vh;
+  }
 .Parent{
     display: flex;
 }
